--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <div class="container">
         <div class="heading">
+          <img src="img/logo.png" alt="Golden Logo" class="logo" />
           <nav>
             <ul class="menu">
               <li>
