--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="container">
-        <div class="heading">
+        <div class="heading clearfix">
           <img src="img/logo.png" alt="Golden Logo" class="logo" />
           <nav>
             <ul class="menu">
@@ -31,6 +31,12 @@
             </ul>
           </nav>
         </div>
+
+        <div class="header_title">
+          <div class="titles1">Welcome to Our Studio</div>
+          <h1>It's nice to meet you!</h1>
+        </div>
+        <button class="button">Tell Me More</button>
       </div>
     </header>
     <section><div class="container"></div></section>
